--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.2",
     "vue-material": "^0.7.4",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.5.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
