--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "crypto-js": "^3.1.9-1",
     "d3": "^4.13.0",
+    "d3-svg-legend": "^2.25.5",
     "humanize": "^0.0.9",
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
