--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "chart.js": "^2.7.2",
     "crypto-js": "^3.1.9-1",
     "d3": "^4.13.0",
     "d3-svg-legend": "^2.25.5",
