--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "humanize": "^0.0.9",
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
+    "numeral": "^2.0.6",
     "topojson": "^3.0.2",
     "vue": "^2.5.2",
     "vue-material": "^0.7.4",
