--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "numeral": "^2.0.6",
+    "object-path": "^0.11.4",
     "topojson": "^3.0.2",
     "vue": "^2.5.2",
     "vue-material": "^0.7.4",
