--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-material": "^0.7.4",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.8.1",
+    "vuetify": "^1.3.11",
     "vuex": "^3.0.1",
     "world-atlas": "^1.1.4"
   },
