--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "Bosco Ho <apposite@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "node check-config.js && webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node check-config.js && node build/build.js",
+    "format": "prettier-standard src/**/*vue src/*/**/*vue src/**/*js src/*/**js && eslint --fix src/**/*vue src/*/**/*vue src/**/*js src/*/**js",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -16,46 +17,46 @@
     "crypto-js": "^3.1.9-1",
     "d3": "^4.13.0",
     "d3-svg-legend": "^2.25.5",
+    "fs-extra": "^7.0.1",
     "humanize": "^0.0.9",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "numeral": "^2.0.6",
     "object-path": "^0.11.4",
     "topojson": "^3.0.2",
-    "vue": "^2.5.2",
-    "vue-material": "^0.7.4",
+    "vee-validate": "^2.1.0-beta.8",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vue-slider-component": "^2.8.1",
-    "vuetify": "^1.3.11",
+    "vuetify": "^1.1.13",
     "vuex": "^3.0.1",
     "world-atlas": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.6",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.0",
-    "eslint": "^4.15.0",
-    "eslint-config-prettier": "^3.0.1",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-prettier-standard": "^2.0.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.2.2",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -63,22 +64,24 @@
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
+    "portfinder": "^1.0.16",
     "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
+    "prettier": "^1.16.4",
+    "prettier-standard": "^9.1.1",
     "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
+    "semver": "^5.5.1",
     "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.4"
   },
   "engines": {
     "node": ">= 6.0.0",
